...
            contentScale = ContentScale.FillBounds
        )

        Column(
            modifier = Modifier
                .fillMaxSize()
                .testTag("MeasurementListScreen")
        ) {

            IconButton(onClick = { navController.navigate("start") }) {
                Icon(
                    imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                    contentDescription = "Back arrow",
                    modifier = Modifier
                        .size(30.dp)
                        .offset(6.dp, 6.dp)
                        .testTag("BackArrow")
                )
            }

            Spacer(modifier = Modifier.height(16.dp))

            Text(
...
