...
    var bmiResult by remember { mutableStateOf("") }
    var showError by remember { mutableStateOf(false) }

    ConstraintLayout(
        modifier = Modifier
            .fillMaxSize()
            .testTag("BmiScreen")
    ) {
        val (bmiInfoText, genderText, genderGroup, weightText, weightInput, heightText, heightInput, calculateButton, bmiResultText, clearDataButton, errorText) = createRefs()

        Image(
            painter = painterResource(id = R.drawable.background1),
            contentDescription = "blue background",
...
